fixed footer text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ footer
 {
     font-size: 16px;
     color: violet;
-    text-align:center;
+    text-align: center;
     padding: 25px;
     height:60px;
     background-color:#666666;
@@ -245,7 +245,7 @@ a:active {
 		margin: auto;
 	}
 
-	p{
+	#content p {
 		float: left;
 	}
 
@@ -293,7 +293,6 @@ a:active {
 	}
 	p {
 		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		float: left;
 		padding: 10px;
 		margin-left: 10px;
 		color: #777777;
@@ -320,7 +319,10 @@ a:active {
 		float:left;
 		background-color: #ffffff;
 	}
-
+	#profile-pic {
+		display: block;
+		margin: 0 auto;
+	}
 
 
 
@@ -371,7 +373,6 @@ a:active {
 	}
 	p {
 		font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-		float: left;
 		padding: 10px;
 		margin-left: 10px;
 		color: #777777;
